logs/mobility/build.make.004.log.stderr
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In constructor ‘PickUpController::PickUpController()’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:8:1: error: ‘blockBlock’ was not declared in this scope
 blockBlock = false;
 ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘void PickUpController::reset()’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:273:1: error: ‘blockBlock’ was not declared in this scope
 blockBlock = false;
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:387:30: error: ‘class PickUpController’ has no member named ‘correctAngleBearingToPickUpCube’
 goodAngle = pickUpController.correctAngleBearingToPickUpCube;
                              ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1008:19: error: ‘class PickUpController’ has no member named ‘correctAngleBearingToPickUpCube’
  pickUpController.correctAngleBearingToPickUpCube = currentLocation.theta - result.blockYawError;
                   ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
